--- a/athletes.html
+++ b/athletes.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/main.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script defer type="module" src="/scripts/athletesInformation.js"></script>
+    <script defer tyoe="module" src="/scripts/animations.js"></script>
     <style>
 
     </style>
@@ -15,19 +17,10 @@
 
     </header>
     <main>
-        <banner-img
-        imgUrl = "premier-league-banner.jpeg">
-        </banner-img>
-        <content-tabs>
-        </content-tabs>
-        <section id="athletes-main">
-            <card-item
-            name = "Karten Warholm"
-            imgUrl = "norwegian-athletes/warholm.jpeg"
-            imgAlt = "Karsten Warholm"
-            background = "rgb(34, 33, 169)">
-            </card-item>
-        </section>
+
+        <div class="array-output">
+
+        </div>
     </main>
 
     
