--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
     <script defer src="/scripts/main-navbar.js"></script>
+    <script defer src="/scripts/bannerAnim.js"></script>
 </head>
 <body>
     
@@ -32,7 +34,7 @@
     <main id="main-content-container">
          <section class="banner-container">   
              <div class="home-banner">
-                 <h1 class="">Knowledge<span class="initials">ME</span></h1>
+                 <h1 class="home-banner__title">Knowledge<span class="initials">ME</span></h1>
              </div>   
         </section>
 
@@ -61,6 +63,8 @@
 
 
     </main>
+
+    <footer style="height: 1000px;"></footer>
       
 
     <script src="scripts/components/Banner.js"></script>
