--- a/quiz.html
+++ b/quiz.html
@@ -47,7 +47,7 @@
         <content-tabs></content-tabs>
     
         <section class="quiz">
-            <section class="user-section">  
+            <section class="user-section border-box">  
                     <h2 class="user-header">Fyll inn informasjon</h2>
                     <article class="input-container">
                         <label for="playername">Brukernavn</label>
@@ -57,7 +57,7 @@
                     </article>  
                 </section>
 
-                <article class="quiz__box">
+                <article class="quiz__box border-box">
                     <h3 class="quiz__header">Test dine ferdigheter</h3>
                     <button class="quiz__start-btn btn">Start Quiz</button>
                     <button class="highscore-btn btn">Highscores</button>
