--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 
         <section class="content-header">
             <a class="btn" href="quiz.html">Gå til quiz</a>
+            <div class="tooltip">
+                <i class="tooltip-icon fas fa-question-circle"></i>
+                <p class="tooltip-text">Trykk på kortene for mer informasjon</p>
+            </div>
             <section class="content-filters">
                 <select name="filter-select" id="filter-select">
                 </select>
